<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">服务快手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="login_user_name_hint">手机号码</string>
    <string name="login_user_password_hint">验证码</string>
    <string name="login_login_btn_tv">登 录</string>
    <string name="submit">提交</string>
    <string name="login_forget_pw">忘记密码?</string>
    <string name="item_repair">故障报修</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="item_email">Email</string>
    <string name="email_subject">邮件主题:</string>
    <string name="email_content">邮件正文:</string>
    <string name="email_submit">发送</string>
    <string name="email_title">邮件内容:</string>
    <string name="item_complaint">投诉</string>
    <string name="item_consult">产品咨询</string>
    <string name="item_advice">合理化建议</string>
    <string name="item_progress">进度查询</string>
    <string name="item_sell">购买备件</string>
    <string name="item_comment">服务评价</string>
    <string name="please_select">请选择</string>
    <string name="button_next">下一步</string>
    <string name="customize_phone_text">电话配置</string>
    <string name="customize_email_text">邮箱配置</string>
    <string name="customize_email_enable">是否启用邮箱服务？</string>
    <string name="customize_server_text">服务器地址配置</string>
    <string name="exit_system">退出系统</string>
    <string name="advice_title">建议内容:</string>
    <string name="repair_title">报修内容:</string>
    <string name="comment_title">评价内容:</string>
     <string name="progress_title">进度查询:</string>
    <string name="sell_title">备件细项:</string>
    <string name="consult_title">咨询内容:</string>
    <string name="advice_hint">点击这里输入内容:</string>
    <string name="sell_hint">点击这里输入您想要购买的备件细项内容:</string>
    <string name="complaint_title">投诉内容:</string>
    <string name="complaint_hint">点击这里输入内容:</string>
    <string name="product_no">产品序列号:</string>
    <string name="progress_no">服务查询号:</string>
    <string name="task_no">待评价服务:</string>
    <string name="comment_content">评价内容:</string>
    <string name="progress_content">查询结果:</string>
    <string name="comment_content_super_satisfy">很满意</string>
    <string name="comment_content_satisfy">满意</string>
    <string name="comment_content_unsatisfy">不满意</string>
    <string name="comment_reason">原因:</string>
    <string name="product_type">产品型号:</string>
    <string name="product_category">产品种属:</string>
    <string name="product_else">其他:</string>
    <string name="add_no">手动添加</string>
    <string name="fault_time">故障发生时间:</string>
    <string name="fault_content">故障现象:</string>
    <string name="fault_change">发生故障前是否改动过机器或其相关部分:</string>
    <string name="fault_change_content">产品变化现象:</string>
    <string name="method_phone">短信</string>
    <string name="method_email">邮件</string>
    <string name="method_server">直达</string>
    
    <string name="default_IPAddress">http://180.166.214.139:8803</string>
    <string name="default_service">/UnityPrimaService/service</string>
    <string name="default_email">sunke3296@163.com</string>
   <string name="default_phone_mobile">10657109050002</string>
    <string name="default_phone_net">1065502182708</string>
    <string name="default_phone_comu">1065902100117</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    
    <string name ="email_tip">您的邮件已发送，我们将尽快给您回复,谢谢！</string>
    <string name ="message_advice_tip">您的建议已通过短信发送，谢谢！</string>
    <string name ="server_advice_tip">您的建议已成功发送，谢谢！</string>
    <string name ="server_comment_tip">您的评价已成功发送，谢谢！</string>
    <string name ="message_consult_tip">您的咨询内容已发送，我们将在48小时内给您回复，谢谢！</string>
    <string name ="message_sell_tip">您的服务请求已发送，我们将尽快给您回复，谢谢！</string>
    <string name ="message_progress_tip">您的进度查询已发送，我们将尽快给您回复，谢谢！</string>
    <string name ="message_complaint_tip">您的投诉内容已通过短信发送，我们将尽快给您回复，谢谢！</string>
    <string name ="server_complaint_tip">您的投诉内容已成功发送，我们将尽快给您回复，谢谢！</string>
    <string name ="message_repair_tip">您的报修内容已通过短信发送，我们将在24小时内给您回复，谢谢！</string>
    <string name ="server_repair_tip">您的报修内容已发送，我们将在24小时内给您回复，谢谢！</string>
    
    <string name ="about_title">关于团结普瑞玛信息化平台</string>
    <string name ="about_company">上海团结普瑞玛激光设备有限公司出品</string>
    <string name ="about_address">上海市闵行区昆阳路2019号</string>
    <string name ="about_phone">售后服务热线:4006201918</string>
    <string name ="about_wesite">官网:www.unityprima.com</string>
    <string name ="dial_phone">拨打 4006201918</string>
    <string name ="go_website">访问 www.unityprima.com</string>
</resources>