<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/repair_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_gray_line"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_title_height"
        android:background="@color/head_color" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/activity_back_btn_size"
            android:layout_height="@dimen/activity_back_btn_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/title_margin_left"
            android:layout_marginRight="@dimen/back_btn_margin_right"
            android:background="@drawable/btn_back"
            android:gravity="center"
            android:paddingLeft="7.0dip" />

        <View
            android:id="@+id/line"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_toRightOf="@id/btn_back"
            android:background="@color/white" />

        <TextView
            android:id="@id/base_title_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/title_padding_left"
            android:paddingRight="@dimen/title_padding_right"
            android:singleLine="true"
            android:text="@string/item_repair"
            android:textColor="@color/btn_text_color_white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin_size"
                android:layout_marginRight="@dimen/item_margin_size"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/bg_form_top"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:text="@string/repair_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/login_forget_pw_text_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin_size"
                android:layout_marginRight="@dimen/item_margin_size"
                android:background="@drawable/bg_advice_form"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/fault_content"
                    android:textColor="@color/login_forget_pw_text_gray"
                    android:textSize="@dimen/label_item_text_size" />

                <EditText
                    android:id="@+id/etxt_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="3.0dip"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/advice_hint"
                    android:inputType="textMultiLine"
                    android:lines="4" 
                    android:maxLength="1000">
                </EditText>

                <LinearLayout
                    android:id="@id/login_help_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fault_change"
                        android:layout_weight="16"
                        android:textColor="@color/login_forget_pw_text_gray"
                        android:textSize="@dimen/label_item_text_size" />

                    <CheckBox
                        android:id="@+id/cb_change"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginRight="5.0dip"
                        android:layout_weight="1"
                        android:text="" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etxt_change"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="3.0dip"
                    android:ems="3"
                    android:gravity="top"
                    android:hint="@string/advice_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:visibility="gone" 
                    android:maxLength="1000"/>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="@dimen/button_submit_width"
                    android:layout_height="@dimen/button_submit_height"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_rectangle_selector"
                    android:text="@string/submit"
                    android:layout_marginTop="@dimen/button_submit_margin_top"
                    android:layout_marginBottom="@dimen/button_submit_margin_bottom"
                    android:textSize="@dimen/label_item_text_size" />
            </LinearLayout>
            <include
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        layout="@layout/layout_footer" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>